# TDT4200

./: .gitignore  README.md  makeZip.sh
a1/: .gitignore  CMakeLists.txt  run.sh
a1/inc/: bitmap.h
a1/program/: bitmap
a1/src/: bitmap.c  main.c
a2/: CMakeLists.txt  run.sh
a2/program/: bitmap
a2/src/: main.c
a2_cmake/: CMakeLists.txt  do.sh
a2_make/: .gitignore  Makefile  do.sh
a2_make/inc/: bitmap.h
a2_make/src/: bitmap.c  main.c
a2_simple/: Makefile  bitmap.c  bitmap.h  main.c
a3/: do.sh
a3/inc/: bitmap.h  border.h  borders.h
a3/src/: bitmap.c  border.c  borders.c  main.c
a3_baseline/: Makefile  do.sh  main  main.c
a3_task2/: CMakeLists.txt
a3_task2/inc/: bitmap.h
a3_task2/src/: bitmap.c  borders.c  main.c
a4/: Makefile
a4/src/: main.c
a4_baseline/src/: main.c
a5/openmp/: main.c
a5/pthread/src/: main.c
a6/: CMakeLists.txt  Makefile  mandel.cu
a7/: Makefile  main.cu
a8/: Makefile  main.cu  test.sh
